# cutover-mcp-public

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  TEST_RESULTS_PR1.md  claude_desktop_config.json.example  mcp.json.example  pyproject.toml  pyproject.toml.bak
.github/: pull_request_template.md
.github/workflows/: test.yml
src/cutover_mcp/: __init__.py  app.py  models.py  server.py
src/cutover_mcp/clients/: api.py
src/cutover_mcp/tools/: __init__.py  action_log.py  runbooks.py  streams.py  task_types.py  tasks.py  workspaces.py
tests/: conftest.py
tests/unit/tools/: __init__.py  test_action_log.py  test_runbooks.py  test_streams.py  test_task_types.py  test_tasks.py  test_workspaces.py
